-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 12
-
Component/s: hotspot
-
b15
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8322080 | 11.0.23 | Amos SHI | P4 | Resolved | Fixed | b01 |
| JDK-8314915 | 11.0.22-oracle | ANANT SINGH | P4 | Resolved | Fixed | b01 |
The test:
runtime/XCheckJniJsig/XCheckJSig.java
still expects to find libraries in the lib/<arch> directory on Linux/Solaris:
} else {
env_var = "LD_PRELOAD";
libjsig = jdk_path + "/jre/lib/" + os_arch + "/libjsig.so"; // jdk location
if (!(new File(libjsig).exists())) {
libjsig = jdk_path + "/lib/" + os_arch + "/libjsig.so"; // jre location
}
}
but the arch directory was removed from the JRE a long time ago.
The test doesn't fail because it "skips" when the library can't be found:
TEST: runtime/XCheckJniJsig/XCheckJSig.java
build: 2.09 seconds
compile: 2.09 seconds
main: 0.772 seconds
TEST RESULT: Passed. Skipped: jtreg.SkippedException: File /export/users/dh198349/jdk-dev3/open/test/hotspot/jtreg/../../../../build/linux-x64-debug/images/jdk/lib/amd64/libjsig.so not found
--------------------------------------------------
runtime/XCheckJniJsig/XCheckJSig.java
still expects to find libraries in the lib/<arch> directory on Linux/Solaris:
} else {
env_var = "LD_PRELOAD";
libjsig = jdk_path + "/jre/lib/" + os_arch + "/libjsig.so"; // jdk location
if (!(new File(libjsig).exists())) {
libjsig = jdk_path + "/lib/" + os_arch + "/libjsig.so"; // jre location
}
}
but the arch directory was removed from the JRE a long time ago.
The test doesn't fail because it "skips" when the library can't be found:
TEST: runtime/XCheckJniJsig/XCheckJSig.java
build: 2.09 seconds
compile: 2.09 seconds
main: 0.772 seconds
TEST RESULT: Passed. Skipped: jtreg.SkippedException: File /export/users/dh198349/jdk-dev3/open/test/hotspot/jtreg/../../../../build/linux-x64-debug/images/jdk/lib/amd64/libjsig.so not found
--------------------------------------------------
- backported by
-
JDK-8314915 [Testbug] runtime/XCheckJniJsig/XCheckJSig.java looks for libjsig in wrong location
-
- Resolved
-
-
JDK-8322080 [Testbug] runtime/XCheckJniJsig/XCheckJSig.java looks for libjsig in wrong location
-
- Resolved
-
- duplicates
-
JDK-8211084 runtime/XCheckJniJsig/XCheckJSig.java failed with java.lang.RuntimeException: 'libjsig is activated' missing from stdout/stderr
-
- Closed
-