8211438: [Testbug] runtime/XCheckJniJsig/XCheckJSig.java looks for libjsig in wrong location

Remove the os_arch string and JRE path from the test.  Also add JNIEXPORT to libjsig symbols so dlsym can find them

Reviewed-by: dholmes, lfoltan